[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scenes/Level Selection/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Level Selection/Wall.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Level Selection/sidewall.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Level Selection/Arealvl.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/Level Selection/Player.gd" type="Script" id=5]
[ext_resource path="res://sprites/Level Selection/background.png" type="Texture" id=6]
[ext_resource path="res://sprites/kenney_scribbledungeons/PNG/Double (128px)/Characters/green_character.png" type="Texture" id=7]
[ext_resource path="res://sprites/kenney_scribbledungeons/PNG/Double (128px)/Characters/red_character.png" type="Texture" id=8]
[ext_resource path="res://sprites/ezgif-5-c78da93506-png-16x32-sprite-png/tile001.png" type="Texture" id=9]
[ext_resource path="res://sprites/controls.png" type="Texture" id=10]
[ext_resource path="res://sprites/TopDownCharacter/Character/Character_Down.png" type="Texture" id=11]
[ext_resource path="res://sprites/Warrior/Individual Sprite/idle/Warrior_Idle_1.png" type="Texture" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 512.75, 1.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 513.25, 1.5 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Level_Sel" type="Node2D"]

[node name="right_wall" parent="." instance=ExtResource( 2 )]
position = Vector2( 1016.5, -43 )

[node name="left_wall" parent="." instance=ExtResource( 2 )]
position = Vector2( -10.5, -33 )

[node name="down_wall" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( 3, 610.5 )
rotation = 0.0

[node name="CollisionShape2D" parent="down_wall" index="18"]
position = Vector2( 509.25, -9 )
shape = SubResource( 1 )

[node name="up_wall" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( 3, 7.5 )
rotation = 0.0

[node name="CollisionShape2D" parent="up_wall" index="18"]
position = Vector2( 509.75, -9 )
shape = SubResource( 2 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 512, 300 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 511, 435 )
scale = Vector2( 0.991146, 0.987048 )
script = ExtResource( 5 )

[node name="StaticBody2D" parent="." instance=ExtResource( 3 )]
position = Vector2( 308, 159 )

[node name="StaticBody2D2" parent="." instance=ExtResource( 3 )]
position = Vector2( 716, 159 )

[node name="Area2D" parent="." instance=ExtResource( 4 )]
position = Vector2( 140, 84 )

[node name="Area2D2" parent="." instance=ExtResource( 4 )]
position = Vector2( 510.5, 85 )

[node name="Sprite" parent="Area2D2/CollisionShape2D" index="0"]
texture = ExtResource( 7 )

[node name="Area2D3" parent="." instance=ExtResource( 4 )]
position = Vector2( 884, 85 )

[node name="Sprite" parent="Area2D3/CollisionShape2D" index="0"]
texture = ExtResource( 8 )

[node name="WarriorIdle1" type="Sprite" parent="."]
position = Vector2( 890, 77 )
scale = Vector2( 1.125, 1.20455 )
texture = ExtResource( 12 )

[node name="Tile001" type="Sprite" parent="."]
position = Vector2( 512, 95 )
scale = Vector2( 2.625, 2.11364 )
texture = ExtResource( 9 )

[node name="Controls" type="Sprite" parent="."]
position = Vector2( 495, 327 )
scale = Vector2( 0.138674, 0.151015 )
texture = ExtResource( 10 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 141, 80 )
scale = Vector2( 2.10937, 2.07812 )
frames = SubResource( 4 )
playing = true

[connection signal="body_entered" from="Area2D" to="Player" method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Area2D2" to="Player" method="_on_Area2D2_body_entered"]
[connection signal="body_entered" from="Area2D3" to="Player" method="_on_Area2D3_body_entered"]

[editable path="down_wall"]
[editable path="up_wall"]
[editable path="Area2D2"]
[editable path="Area2D3"]
